feat: externalize configuration and improve CORS handling in backend